--- a/src/calendar/calendar.scss
+++ b/src/calendar/calendar.scss
@@ -1,43 +1,42 @@
 #eventList{
   color:white;
   height: 900px;
-  // text-align: center;
-  // background-color: blue;
 }
 // Variables
 $thickness:  6px;
+$fontStyle: 'Lato', sans-serif;
+$lineColor: #FFFFFF;
+$dotColor: #FFFFFF;
+$textSize: 16px;
 
 .bg-line {
    width: 100%;
    height: 100%;
-
-   // Horizontal BG Line
    &--h {
-      background: linear-gradient(0deg, #FFFFFF, #FFFFFF) 50% 50% no-repeat;
+      background: linear-gradient(0deg, $lineColor, $lineColor) 50% 50% no-repeat;
       background-size: $thickness 100%;
    }
 }
-.dot1{
+
+.dotRight{
   width: 100%;
   font-size: 17px;
-  font-family: 'Lato', sans-serif;
-  font-weight: 700;
+  font-family: $fontStyle;
 }
-.dot1::before{
+.dotRight::before{
   content: '\00a0\00a0\00a0\00a0\00a0\00a0';
-  border: 4px solid #FFFFFF;
+  border: 4px solid $dotColor;
   border-radius: 50%;
   margin-left: 91px;
 }
-.dot2{
+.dotLeft{
   width: 100%;
   font-size: 17px;
-  font-family: 'Lato', sans-serif;
-  font-weight: 700;
+  font-family: $fontStyle;
 }
-.dot2::after{
+.dotLeft::after{
   content: '\00a0\00a0\00a0\00a0\00a0\00a0';
-  border: 4px solid #FFFFFF;
+  border: 4px solid $dotColor;
   border-radius: 50%;
   margin-right: 87px;
   width: 50px;
@@ -46,24 +45,14 @@ $thickness:  6px;
 .content1{
   width: 50%;
   float: right;
-  // background-color: red;
 }
-.pion{
-  // background-color: purple;
+.line{
+  height: 100px;
 }
-.contentPion{
-  // background-color: green;
-}
-.kreska{
-height: 100px;
- // background-color: red;
-}
-.kreskaContent{
-height: 100px;
-// background-color: green;
-font-size: 16px;
-font-family: 'Lato', sans-serif;
-font-weight: 700;
-padding-top: 10px;
-
+.lineContent{
+  height: 100px;
+  font-size: $textSize;
+  font-family: $fontStyle;
+  font-weight: 700;
+  padding-top: 10px;
 }
