--- a/src/base.scss
+++ b/src/base.scss
@@ -19,12 +19,13 @@ a:visited {
 
 .pageBackground{
   margin-top: 1%;
-  opacity: 0.5;
+  // opacity: 0.5;
   color: white;
   text-align:center;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 .pageLogo{
+  opacity: 0.5;
   font-family: 'Lato', sans-serif;
   font-size: 5em;
   font-weight: 900;
