--- a/src/base.scss
+++ b/src/base.scss
@@ -18,8 +18,8 @@ a:visited {
 }
 
 .pageBackground{
+  margin-bottom: 20px;
   margin-top: 1%;
-  // opacity: 0.5;
   color: white;
   text-align:center;
   background-color: rgba(0, 0, 0, 0.5);
