--- a/src/news/news.scss
+++ b/src/news/news.scss
@@ -3,6 +3,7 @@
   height: 100%;
 }
 .eventConent{
+  opacity: 0.6;
   margin-top: 10px;
   left: 0px;
   color: black;
@@ -11,11 +12,12 @@
   min-height: 100px;
 }
 .eventConent:hover{
-  opacity: 1.0 !important;
+  opacity: 0.9 !important;
   border-left: 10px solid #4d4d4d;
   cursor: pointer
 }
 .eventDate{
+  opacity: 0.6;
   margin-top: 10px;
  font-family: 'Lato', sans-serif;
   font-size: 1.2em;
